Fixed modal overflow display

--- a/timecase/styles/style.css
+++ b/timecase/styles/style.css
@@ -22,20 +22,39 @@ body.modal-open {
 	right: 0 !important;
 	bottom: 0 !important;
 	width: 100% !important;
-	height: 100% !important;
 	height: 100vh !important;
 	margin: 0 !important;
 	border-radius: 0 !important;
+	padding: 0 !important;
+}
+.modal-header {
+	position: absolute !important;
+	top: 0 !important;
+	left: 0 !important;
+	right: 0 !important;
+	z-index: 1 !important;
 }
 .modal-body {
-	height: calc(100vh - 140px) !important;
+	position: absolute !important;
+	top: 0 !important;
+	left: 0 !important;
+	right: 0 !important;
+	bottom: 0 !important;
 	overflow-y: auto !important;
+	padding-top: 60px !important;
+	padding-bottom: 100px !important;
+}
+.modal-footer {
+	position: absolute !important;
+	bottom: 0 !important;
+	left: 0 !important;
+	right: 0 !important;
+	z-index: 1 !important;
 }
 }
 @media (min-width :770px) {
 .modal {
 	max-height: 80vh !important;
-	/* overflow: scroll; */
 }
 .modal-body {
 	max-height: 60vh !important;
